Upgraded to Vaadin 25.2.3